remove unused code, and updating documentation
